# dagster-metadata-framework

./: .gitignore  README.md  db_test.py  debug_schedules.py  init_db.py  pyproject.toml  seed_nexus.py  verify_3_1_3_2.py  verify_blueprint_sync.py  verify_factory_sensors.py  verify_hydration.py  verify_instance_hydration.py  verify_nexus.py  verify_phase2.py  verify_static_hydration.py  verify_static_tagging.py  verify_stealth.py
alembic/: README.md  env.py
alembic/versions/: 0cb07e96dc1e_shared_pipeline_id_sequence_and_bigint_.py  1081b9169e01_hierarchical_foundation.py  1282532b263a_consolidate_job_models.py  1bf7a9c1e2e3_add_hierarchical_variables_and_log_url.py  2faff465f2fc_add_serialized_content_to_job_definition.py  3315655e945d_standardize_params_schema.py  3315655e945d_standardize_schema_and_add_params_.py  3af592cd1669_schema_alignment.py  3eb7404ae507_widen_invok_id_and_run_mde_txt_columns.py  463715dfb834_add_rbac_tables.py  46919db7c573_create_etl_schedule_table.py  46f5d6eb309a_enforce_scoping_non_nullable.py  4b8e5e9ac457_add_blueprint_table.py  4c39c260468c_initial_metadata_schema.py  4f77c3a2b13d_unify_definitions_and_link_by_id.py  5357dc4170ae_org_code_foundation.py  5ff389487b32_scope_params_to_hierarchy.py  7a8b9c0d1e2f_squashed_initial.py  (+14 more)
scripts/: create_admin.py  db_audit.py  fix_schedules.py  init_db.py  migrate_v1_rbac.py  seed_conn_schemas.py  seed_nexus.py  seed_org_foundation.py  seed_rbac.py  seed_v1_base.py  sync_metadata_v1.py  verify_db_schema.py  verify_phase_3.py
tests/: test_factory.py  test_observability.py  test_params.py
(+10 files in other folders)
