[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dagster-metadata-framework"
version = "0.0.1"
description = "Parameters-driven runtime extension for dagster-dag-factory"
dependencies = [
    "dagster==1.11.1",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "alembic>=1.11.0",
    "sqlalchemy>=2.0.0",
    "dagster-dag-factory",
]

[project.scripts]
metadata-framework = "metadata_framework.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
managed = true
dev-dependencies = [
    "pytest>=7.0.0",
]
